# contradictory-beliefs-sdf

./: .gitignore  EXPERIMENT_REPORT.md  METHODOLOGICAL_REVIEW.md  README.md  SDF for Contradictory Beliefs Mini-Proposal.md  TEST_DUMP.txt  TEST_PYTHON_OUTPUT.txt  TEST_PYTHON_OUTPUT2.txt  TEST_PYTHON_RAN  belief_validation.json  pyproject.toml  test1.py
configs/: experiment_config.json
docs/: OVERNIGHT_REPORT.md  belief_probes_long.json  cannabis_sacs_local_log.jsonl  eval_report_v2.html  eval_suite_report.html  index.html
eval_results/: self_reflection_eval_032326_063005.json  self_reflection_eval_032326_215559.json
evaluations/: belief_strength_eval.py  belief_strength_multi.py  contradiction_judge.py  contradiction_judge_binary.py  implantation_judge.py  logit_diff_probes.py  logit_diff_probes_free_speech.py  multiturn_judge.py  run_eval.sh  run_l1_l2_l3_responses.py  run_l4_confrontation_eval.py  run_l5_behavioral_probes.py  run_multimodel_eval_cannabis.py  run_multimodel_eval_free_speech.py  run_ood_belief_eval.py  run_self_reflection_eval.py  run_self_reflection_eval_free_speech.py
scripts/: CONSISTENCY_EARLY_STOPPING.md  aggregate_suite_results.py  aggregate_suite_v2.py  analyze_belief_probes.py  analyze_consistency_log.py  auto_train_belief_strict.sh  build_eval_suite_report.py  build_report_v2.py  chain_followup_cannabis_sacs.sh  chain_principle_sdf.sh  chain_principle_sdf_long.sh  chained_pipeline.sh  classify_dpo_rejected.py  compare_logit_probes.py  consistency_callback.py  dpo_sweep.sh  dpo_sweep_eval.sh  eval_principle_adapter.py  finetune_dpo.py  (+39 more)
(+187 files in other folders)
