[project]
name = "contradictory-beliefs-sdf"
version = "0.1.0"
description = "Synthetic Document Finetuning for Contradictory Beliefs - studying value drift via self-reflection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42.0",
    "datasets>=3.2.0",
    "fire>=0.7.0",
    "openai>=1.58.1",
    "peft>=0.14.0",
    "pydantic>=2.10.4",
    "tqdm>=4.66.5",
    "torch>=2.5.1",
    "transformers>=4.47.1",
    "accelerate>=1.3.0",
    "together>=1.2.12",
    "wandb>=0.19.1",
    "scipy>=1.14.1",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "pandas>=2.2.3",
    "jsonlines>=4.0.0",
]

[project.optional-dependencies]
gpu = [
    "vllm>=0.1.2; sys_platform == 'linux'",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["data*", "wandb*", "false-facts-base*"]
